--- a/app6/src/main/res/layout/activity_new.xml
+++ b/app6/src/main/res/layout/activity_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Activity"
+        android:text="새로운 액티비티"
         android:textSize="20sp"
         android:gravity="center_horizontal"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
